--- a/PRJ/gomsu-client/src/app/pages/product-all/product-all.component.css
+++ b/PRJ/gomsu-client/src/app/pages/product-all/product-all.component.css
@@ -19,6 +19,13 @@
   border: 1px solid #464646;
   border-radius: 4px;
   padding: 5px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.button-left:hover {
+  transition: 0.1s ease background-color;
+  background-color: #f1f1f1;
 }
 
 .btn-quick-sort {
@@ -67,4 +74,36 @@
 .danhmuc-item:hover {
   background-color: #f1f1f1;
   color: #f7902a;
+}
+
+.pagination-controls {
+  display: flex;
+  justify-content: center;
+  margin: 20px auto;
+}
+
+::ng-deep .ngx-pagination {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  padding-left: 0px !important;
+}
+
+::ng-deep .ngx-pagination li {
+  background-color: #fff !important;
+  color: #464646 !important;
+  border: 1px solid #f7902a !important;
+  border-radius: 6px !important;
+  margin-right: 10px!important;
+  overflow: hidden!important;
+}
+
+::ng-deep .ngx-pagination .current {
+  background-color: #f7902a !important;
+  color: #fff !important;
+}
+
+::ng-deep .ngx-pagination .disabled {
+  pointer-events: none !important;
+  opacity: 0.5 !important;
 }
