update another service

--- a/PRJ/gomsu-client/src/app/shared/product/product.component.html
+++ b/PRJ/gomsu-client/src/app/shared/product/product.component.html
@@ -89,6 +89,7 @@
                 type="number"
                 name="quantity"
                 class="quantity-value"
+                min="1"
                 [(ngModel)]="quantity"
               />
               <button class="btn-quantity" (click)="handleIncreaseQuantity()">
