--- a/PRJ/gomsu-client/src/app/pages/home/home.component.html
+++ b/PRJ/gomsu-client/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
   <app-catalog></app-catalog>
   <div class="product">
     <div class="heading container">
-      <h1 class="heading-text">Sản phẩm nội bật</h1>
+      <h1 class="heading-text">Sản phẩm mới nhất</h1>
       <div class="filter">
         <a href="#" class="filter-item filter-item-active">Tất cả</a>
         <a href="#" class="filter-item">Bộ Trà</a>
@@ -13,19 +13,13 @@
     </div>
     <div class="products container">
       <div class="row">
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
-        <div class="product-item col-sm-3"><app-product></app-product></div>
+        <div class="product-item col-sm-3" *ngFor="let item of products">
+          <app-product [product]="item"></app-product>
+        </div>
       </div>
     </div>
   </div>
+  <a [routerLink]="['collections', 'all']" class="btn-viewall">
+    <span class="btn-viewall-text">Xem tất cả</span>
+  </a>
 </div>
