--- a/PRJ/gomsu-client/src/app/pages/login/login.component.html
+++ b/PRJ/gomsu-client/src/app/pages/login/login.component.html
@@ -4,6 +4,7 @@
     [location]="'Đăng nhập tài khoản'"
   ></app-breadcrumb>
   <div id="login-container">
+    <div id="pagination-target"></div>
     <div class="btn-navigate">
       <button
         [routerLink]="['/login']"
