--- a/PRJ/gomsu-client/src/app/pages/register/register.component.html
+++ b/PRJ/gomsu-client/src/app/pages/register/register.component.html
@@ -4,6 +4,7 @@
     [location]="'Đăng ký tài khoản'"
   ></app-breadcrumb>
   <div id="register-container">
+    <div id="pagination-target"></div>
     <div class="btn-navigate">
       <button [routerLink]="['/login']" class="button btn-login">
         Đăng Nhập
