--- a/PRJ/gomsu-client/src/app/shared/product/product.component.html
+++ b/PRJ/gomsu-client/src/app/shared/product/product.component.html
@@ -96,7 +96,7 @@
                 +
               </button>
             </div>
-            <button class="addCart">Thêm vào giỏ hàng</button>
+            <button class="addCart" (click)="handleAddToCart()">Thêm vào giỏ hàng</button>
           </div>
         </div>
       </div>
